<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo2" />

    <EditText
        android:id="@+id/user"
        android:layout_width="312dp"
        android:layout_height="57dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/phone_number_username_or_email"
        android:textColor="#FF958F8F" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="75"
        android:minLines="7"
        android:textColorHint="#FF958F8F" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="#96E5EF"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="15dp"
        app:backgroundTint="#96E5EF" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:textColor="#e74c3c"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/or" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/loginButtonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/loginButtonFacebook"
            android:background="@android:color/transparent"
            android:text="@string/login_with_facebook"
            android:textAllCaps="false"
            android:textColor="#273c75"
            app:backgroundTint="#FFFFFF" />
    </LinearLayout>


    <Button
        android:id="@+id/forget"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="#00F4F4F4"
        android:text="@string/forget_password"
        android:textColor="#000000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="6dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dont_t_have_an_account" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:onClick="signUpOnClick"
            android:text="Sign up"
            android:textAllCaps="false"
            android:textColor="#0095f6"
            app:backgroundTint="#FFFFFF" />
    </LinearLayout>

</LinearLayout>


