<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#FFFFFF"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trouble_logging_in"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/enter_your_email_phone_or_username_and_we_ll_send_you_a_link_to_get_back_into_your_account" />

    <EditText
        android:id="@+id/entermail"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/resetSendLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/send_login_link"
        android:textSize="15dp"
        android:background="#96E5EF"
        app:backgroundTint="#96E5EF"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="OR"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/newAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/create_new_account5"
        android:textAllCaps="false"
        android:textColor="#0095F6"
        app:backgroundTint="@color/white"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/backToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#0095F6"
        app:backgroundTint="@color/white"
        android:background="@android:color/transparent"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:weightSum="2"/>

</LinearLayout>